working addwins, pncounter and gcounter on client. Fixed removal of quantities and negative quantities. Done with Bea